'sj-车型扫描预览功能完成'

--- a/camera/build.gradle
+++ b/camera/build.gradle
@@ -1,24 +1,32 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group = 'com.gitee.songjie_xuan'
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
+
+
     defaultConfig {
-        applicationId "com.xuan.test"
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
@@ -31,8 +39,6 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
-    implementation project(':camera')
 
     // TODO->引入测试框架
     testImplementation 'junit:junit:4.12'
